[gd_scene load_steps=8 format=3 uid="uid://b7ertpcm3wt14"]

[ext_resource type="Texture2D" uid="uid://bekajfg2v56fi" path="res://assets/sprites/player/projectiles/all bullets.png" id="1_2v0fm"]
[ext_resource type="Script" path="res://players/projectiles/lemon.gd" id="1_s36o1"]
[ext_resource type="Texture2D" uid="uid://b0v6m28t07gmt" path="res://assets/sprites/player/projectiles/lemon_mm4.png" id="3_nncff"]
[ext_resource type="AudioStream" uid="uid://de6mcjiqb2m0n" path="res://assets/sounds/hurt_enemy.wav" id="4_gu0qf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oqjpr"]
atlas = ExtResource("1_2v0fm")
region = Rect2(3, 0, 8, 6)

[sub_resource type="SpriteFrames" id="SpriteFrames_lwm67"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqjpr")
}],
"loop": true,
"name": &"lemon",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_paodp"]
size = Vector2(8, 6)

[node name="lemon" type="CharacterBody2D"]
z_index = 1
scale = Vector2(3, 3)
script = ExtResource("1_s36o1")

[node name="anim" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_lwm67")
animation = &"lemon"

[node name="collision_monitor" type="Area2D" parent="." groups=["player_projectiles"]]
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision_monitor"]
shape = SubResource("RectangleShape2D_paodp")

[node name="onscreen" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-2.38419e-07, 0)
scale = Vector2(0.4, 0.3)

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_nncff")

[node name="hurt_enemy_effect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_gu0qf")

[connection signal="area_entered" from="collision_monitor" to="." method="_on_collision_monitor_area_entered"]
[connection signal="body_entered" from="collision_monitor" to="." method="_on_collision_monitor_body_entered"]
[connection signal="screen_exited" from="onscreen" to="." method="_on_onscreen_screen_exited"]
[connection signal="finished" from="hurt_enemy_effect" to="." method="_on_hurt_enemy_effect_finished"]
